<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesActivity"
    android:background="@drawable/back_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="200dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/opciones_sf" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="174dp"
        android:layout_height="158dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="cerdito_hola.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true">

    </com.airbnb.lottie.LottieAnimationView>

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/COLOR_BOTONES"
        android:text="@string/btnCerrarSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConsultaCerdita"
        android:layout_width="124dp"
        android:layout_height="66dp"
        android:layout_marginBottom="380dp"
        android:backgroundTint="@color/COLOR_BOTONES"
        android:text="@string/lbl_ConsultaCriandera"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/btnOpcionAgregar" />

    <Button
        android:id="@+id/btnOpcionAgregar"
        android:layout_width="125dp"
        android:layout_height="66dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="380dp"
        android:backgroundTint="@color/COLOR_BOTONES"
        android:text="@string/btn_AgregarCriandera"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="380dp"
        android:backgroundTint="@color/COLOR_BOTONES"
        android:text="@string/btn_dispensaComida"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>